<resources>
    <string name="app_name">TODOapp</string>
    <string name="email">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="rememberMe">Remember Me</string>

    <string name="signIn">Sign In</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="forgotPassword">Forgot Password?</string>

    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="AlreadyHaveAnAccount">Already have an account?</string>
    <string name="agree">I agree to privacy policy &amp; terms</string>


    <string name="resetPass">Reset Password</string>

    <string name="resetText">To reset your password, please enter your email where you will receive password reset link</string>

    <string name="homePage">Home Page</string>

    <string name="SignOut">Sign Out</string>
    <string name="add_task">add task</string>


    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Critical</item>
    </string-array>

    <string-array name="status_array">
        <item>Todo</item>
        <item>Blocked</item>
        <item>Active</item>
        <item>Cancelled</item>
        <item>Done</item>
    </string-array>


</resources>