<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:gravity="center">



    <EditText

        android:id="@+id/SignUpEmailET"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>


    <EditText

        android:id="@+id/SignUpPasswordET"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText

        android:id="@+id/SignUpRepeatPasswordET"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:inputType="textPassword"
        android:hint="@string/confirmPassword"/>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        >


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/SignUpAgreeCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textSize="16sp"
            android:layout_weight="1"
            android:theme="@style/coloredCheckbox"/>






    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUpBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/button_bg_1"
        android:text="@string/signUp"
        android:textSize="16sp"
        android:textColor="@color/white"/>


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/SignUpAlreadyHaveAnAccountBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/button_bg_2"
        android:text="@string/AlreadyHaveAnAccount"
        android:textSize="16sp"
        android:textColor="@color/sangu_color"/>




</LinearLayout>