<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:gravity="center">



    <EditText

        android:id="@+id/SignInEmailET"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>


    <EditText

        android:id="@+id/SignInPasswordET"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        >


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/SignInRememberMeCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rememberMe"
            android:textSize="16sp"
            android:layout_weight="1"
            android:theme="@style/coloredCheckbox"/>

    </LinearLayout>






    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SigninBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/button_bg_1"
        android:text="@string/signIn"
        android:textSize="16sp"
        android:textColor="@color/white"/>





    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignInSignUpBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/button_bg_1"
        android:text="@string/createNewAccount"
        android:textSize="16sp"
        android:textColor="@color/white"/>


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/SignInForgotPasswordBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/button_bg_2"
        android:text="@string/forgotPassword"
        android:textSize="16sp"
        android:textColor="@color/sangu_color"/>



</LinearLayout>