<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="54dp"
        android:textSize="16sp"
        android:text="@string/resetText"/>

    <EditText

        android:id="@+id/ResetPassEmailET"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ResetPassBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/button_bg_1"
        android:text="@string/resetPass"
        android:textSize="16sp"
        android:textColor="@color/white"/>




</LinearLayout>